sinalcabo/force-app/main/default/objects/SC_Erro_Automacao_Log__c/SC_Erro_Automacao_Log__c.object-meta.xml
<CustomObject>
    <description>Registo das falhas apanhadas pelos caminhos de erro das automações (flows e Apex). Escrito pela classe SC_FlowFaultLogger. Existe para que uma falha tratada deixe de ser silenciosa: fica auditável, ligada ao registo afectado e marcável como resolvida. Decisão do Joel de 17/08/2026 (pendente B3).</description>
    <label>SC Erro de Automação</label>
    <nameField>
        <displayFormat>ERRAUT-{00000}</displayFormat>
        <label>Erro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SC Erros de Automação</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>