sinalcabo/force-app/main/default/objects/SC_Erro_Automacao_Log__c/fields/Abrir_Registo__c.field-meta.xml
<CustomField>
    <fullName>Abrir_Registo__c</fullName>
    <description>Atalho para o registo afectado, para o log ser accionável e não apenas legível. Fica vazio quando a falha não tem registo associado.</description>
    <formula>IF(ISBLANK(Registo_Afectado__c), &quot;&quot;, HYPERLINK(&quot;/&quot; &amp; Registo_Afectado__c, &quot;Abrir registo&quot;))</formula>
    <label>Abrir Registo</label>
    <type>Text</type>
</CustomField>