sinalcabo/force-app/main/default/objects/SC_Erro_Automacao_Log__c/fields/Elemento__c.field-meta.xml
<CustomField>
    <fullName>Elemento__c</fullName>
    <description>Elemento da automação que falhou, por exemplo a gravação Update_Opps_Bulk. Sem isto o diagnóstico obriga a abrir o flow e adivinhar qual das operações rebentou. Escrito automaticamente pela classe SC_FlowFaultLogger.</description>
    <label>Elemento</label>
    <length>80</length>
    <type>Text</type>
</CustomField>