sinalcabo/force-app/main/default/objects/SC_Erro_Automacao_Log__c/fields/Mensagem__c.field-meta.xml
<CustomField>
    <fullName>Mensagem__c</fullName>
    <description>Texto integral da falha, tal como a plataforma o devolveu ($Flow.FaultMessage nos flows, a mensagem da excepção no Apex). Guardado sem interpretação, porque é normalmente aqui que está o nome da validation rule ou do campo em causa. Escrito automaticamente pela classe SC_FlowFaultLogger.</description>
    <label>Mensagem</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>