sinalcabo/force-app/main/default/objects/SC_Erro_Automacao_Log__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <description>Automação onde a falha ocorreu, normalmente o nome da API do flow (por exemplo SC_Opportunity_AlertaDeadline). É por aqui que se sabe onde ir corrigir. Escrito automaticamente pela classe SC_FlowFaultLogger.</description>
    <label>Origem</label>
    <length>80</length>
    <type>Text</type>
</CustomField>