sinalcabo/force-app/main/default/objects/SC_Erro_Automacao_Log__c/fields/Registo_Afectado__c.field-meta.xml
<CustomField>
    <fullName>Registo_Afectado__c</fullName>
    <description>Id do registo em que a falha ocorreu, quando a automação o conhece. Fica vazio nas falhas que não são de um registo específico, por exemplo uma gravação em massa no fim de um ciclo. É texto e não lookup de propósito: as automações que escrevem aqui tocam objectos diferentes (Opportunity, Account, Task).</description>
    <label>Registo Afectado</label>
    <length>18</length>
    <type>Text</type>
</CustomField>