sinalcabo/force-app/main/default/objects/SC_Erro_Automacao_Log__c/fields/Resolvido__c.field-meta.xml
<CustomField>
    <fullName>Resolvido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcado à mão pelo administrador depois de tratar a falha. É o que separa a lista de trabalho do histórico: a list view &quot;Por resolver&quot; filtra por este campo. Sem ele, cada erro antigo volta a ser investigado de cada vez que alguém abre a lista.</description>
    <label>Resolvido</label>
    <type>Checkbox</type>
</CustomField>