sinalcabo/force-app/main/default/objects/SC_Erro_Automacao_Log__c/listViews/Por_Resolver.listView-meta.xml
<ListView>
    <fullName>Por_Resolver</fullName>
    <columns>NAME</columns>
    <columns>Origem__c</columns>
    <columns>Elemento__c</columns>
    <columns>Mensagem__c</columns>
    <columns>Abrir_Registo__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Resolvido__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Por resolver</label>
</ListView>