sinalcabo/force-app/main/default/objects/SC_Erro_Automacao_Log__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Origem__c</columns>
    <columns>Elemento__c</columns>
    <columns>Mensagem__c</columns>
    <columns>Resolvido__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>